# agent-arcade-trentin-v2

./: .gitignore  LICENSE  README.md  fixes.md  gpu_install.sh  install.sh  install_in_venv.sh  near.md  requirements.txt  setup.py  train_all.sh
cli/: __init__.py  main.py
cli/core/: __init__.py  evaluation.py  leaderboard.py  near.py  stake.py  wallet.py
cli/games/: __init__.py  base.py  staking.py
cli/games/pong/: __init__.py  commands.py  game.py  pong_arcade.py
cli/games/riverraid/: __init__.py  game.py
cli/games/space invaders/: space_invaders_arcade.py
cli/games/space_invaders/: __init__.py  game.py
configs/: pong.yaml  pong_parallel_sb3_config.yaml  pong_sb3_config.yaml  riverraid.yaml  space_invaders.yaml  space_invaders_optimized_sb3_config.yaml  space_invaders_sb3_config.yaml
contract/: Cargo.toml  README.md
contract/src/: lib.rs  upgrade.rs
contract/src/tests/: integration.rs  upgrade_tests.rs
contract/src/types/: config.rs  mod.rs  stake.rs  state.rs
docs/: Pong - Reinforcement Learning Demo.mov  README.md  adding-games.md  cli-reference.md  competition-guide.md  competition.md  deployment-guide.md  getting-started.md  installation.md  near-integration.md  training-config.md  training-guide.md  understanding-metrics.md
models/: README.md
models/pong/: config.yaml  config.yaml.bak  metadata.json
models/river_raid/: config.yaml  config.yaml.bak  metadata.json
models/riverraid/: config.yaml.bak
models/space_invaders/: config.yaml  metadata.json
scripts/: add_game.py  evaluate_pong.py  evaluate_space_invaders.py  train_pong.py  train_space_invaders.py  train_space_invaders_optimized.py
tests/: README.md  conftest.py  requirements-test.txt  test_render.py
tests/integration/: test_contract.py
tests/unit/: test_game_interface.py  test_leaderboard.py  test_stake.py  test_wallet.py
