[package]
name = "agent-arcade"
version = "0.1.0"
authors = ["Agent Arcade Team"]
edition = "2021"
repository = "https://github.com/jbarnes850/agent-arcade"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0", features = ["legacy", "abi", "schemars"] }
uint = { version = "0.9.3", default-features = false }
borsh = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[package.metadata.near.reproducible_build]
image = "stable"
image_digest = "sha256:71f0c0d2f062c3fd5b6236686ecbec128af8ccd9b20e1472f0d795b961b1a1e5"
container_build_command = ["cargo", "build", "--target", "wasm32-unknown-unknown", "--release"] 