[package]
name = "agent-arcade"
version = "0.1.0"
authors = ["Agent Arcade Team"]
edition = "2021"
repository = "https://github.com/near-examples/agent-arcade"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0", features = ["legacy", "abi"] }
near-abi = "0.4.3"
schemars = "0.8.12"
borsh = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uint = { version = "0.9.5", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.package.'*']
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 256
rpath = false

[package.metadata.near.reproducible_build]
image = "stable"
image_digest = "sha256:71f0c0d2f062c3fd5b6236686ecbec128af8ccd9b20e1472f0d795b961b1a1e5"
container_build_command = ["cargo", "build", "--target", "wasm32-unknown-unknown", "--release"] 