[package]
name = "agent-arcade"
version = "0.1.0"
authors = ["Agent Arcade <contact@agentarcade.com>"]
edition = "2021"
repository = "https://github.com/jbarnes850/agent-arcade"
description = "Agent Arcade Smart Contract for AI agent staking and competition"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.8.1", default-features = false, features = ["legacy"] }
borsh = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bs58 = "0.5"
near-sys = "0.2.2"
near-token = "0.3"
near-gas = "0.3"
near-account-id = "1.0.0"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
near-workspaces = "0.10.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[package.metadata.near]
wasm-opt-settings = [
  "-O4",
  "--enable-mutable-globals",
  "--enable-threads",
  "--enable-reference-types"
]

[package.metadata.workspaces]
members = ["."]

[package.metadata.near.reproducible_build]
image = "stable"
image_digest = "sha256:71f0c0d2f062c3fd5b6236686ecbec128af8ccd9b20e1472f0d795b961b1a1e5"
container_build_command = ["cargo", "build", "--target", "wasm32-unknown-unknown", "--release"]

[workspace]
members = []

[package.metadata]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-builder = "0.3.0"
wasm-bindgen = "0.2.84" 